--- a/index.html
+++ b/index.html
@@ -214,10 +214,10 @@
                 document.getElementById("container").style.backgroundColor = "rgba(255, 255, 255, 0.8)";
                 parlerTexte("Mode clair activé.");
             } else if (commande.includes("mode rose")) {
-                document.getElementById("container").style.backgroundColor = "rgba(255, 105, 180)";
+                document.getElementById("container").style.backgroundColor = "rgba(255, 192, 203, 0.4)";
                 parlerTexte("Mode rose activé.");
             } else if (commande.includes("mode bleu")) {
-                document.getElementById("container").style.backgroundColor = "rgb(0, 0, 255)";
+                document.getElementById("container").style.backgroundColor = "rgb(173, 216, 230, 0,4)";
                 parlerTexte("Mode bleu activé.");
             }       
             // Commande spéciale Jarvis
