--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <img src="lain.png" alt="Personnage Lain">
         </div>
 
-        <h1>Retro System</h1>
+        <h1>IA Noctavia</h1>
 
         <!-- Calculatrice -->
         <h2>Calculatrice</h2>
