--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                 }
             } else if (commande.includes("quelle est la météo")) {
                 let city = commande.replace("quelle est la météo à", "").trim();
-                fetch(`https://api.openweathermap.org/data/2.5/weather?q=${city}&appid=YOUR_API_KEY&units=metric`)
+                fetch(`https://api.openweathermap.org/data/2.5/weather?q=${city}&appid=87e695e07b0aec53144b66e700a714f7&units=metric`)
                     .then(response => response.json())
                     .then(data => {
                         let temp = data.main.temp;
